WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277093
[Grid][Replaced] Grid item which is an image with specified sizes fails to update when src changes
https://bugs.webkit.org/show_bug.cgi?id=277093
Summary
[Grid][Replaced] Grid item which is an image with specified sizes fails to up...
Sammy Gill
Reported
2024-07-25 13:18:05 PDT
If you have a grid item which is an image and change the src, we fail to invalidate the item on the intrinsic size change and as a result nothing changes in terms of layout
Attachments
Testcase
(523 bytes, text/html)
2024-07-25 13:19 PDT
,
Sammy Gill
no flags
Details
Testcase
(673 bytes, text/html)
2024-07-25 14:05 PDT
,
Sammy Gill
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-25 13:18:58 PDT
<
rdar://problem/132512032
>
Sammy Gill
Comment 2
2024-07-25 13:19:05 PDT
Created
attachment 471968
[details]
Testcase
Sammy Gill
Comment 3
2024-07-25 13:23:43 PDT
The image will also need to have specified values for its width and height for the bug to reproduce
Sammy Gill
Comment 4
2024-07-25 14:05:46 PDT
Created
attachment 471969
[details]
Testcase
Sammy Gill
Comment 5
2024-07-25 14:17:44 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31243
EWS
Comment 6
2024-09-09 08:50:52 PDT
Committed
283343@main
(3e491ebe446c): <
https://commits.webkit.org/283343@main
> Reviewed commits have been landed. Closing PR #31243 and removing active labels.
EWS
Comment 7
2024-09-12 19:18:40 PDT
Committed
283286.23@safari-7620-branch
(d5b896f062fc): <
https://commits.webkit.org/283286.23@safari-7620-branch
> Reviewed commits have been landed. Closing PR #1751 and removing active labels.
Tim Nguyen (:ntim)
Comment 8
2025-01-03 06:58:15 PST
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/49899
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug