[Grid][Replaced] Invalidate replaced element grid items when their intrinsic size changes. https://bugs.webkit.org/show_bug.cgi?id=277093 rdar://problem/132512032

Reviewed by Alan Baradlay.

Currently we do not invalidate replaced elements which are grid items
if they are "constrained." Constrained here means that they have a
specific width and height along with non-intrinsic min-width and
min-height.

For grid this may not be correct since grid's track sizing algorithm
may be influenced by a grid item's intrinsic sizes. The result of the
grid track sizing with the updated intrinsic sizes may have an impact
on the final geometry of the grid item.

To try and recover from this state we can invalidate the renderer and
its containing block chain so that we rerun layout even if it is
constrained.

* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/img-src-changes-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/img-src-changes.html: Added.
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::RenderReplaced::setNeedsLayoutIfNeededAfterIntrinsicSizeChange):

Canonical link: https://commits.webkit.org/283343@main